# django-url-or-relative-url-field

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/url_or_relative_url_field/: apps.py  fields.py  forms.py
url_or_relative_url_field/: fields.py  forms.py  validators.py
