[tool.poetry]
name = "django-url-or-relative-url-field"
version = "0.2.0"
description = "This package provides a Django model field that can store both absolute and relative URLs"
authors = ["Tim Kamanin <tim@timonweb.com>"]
homepage = "https://github.com/timonweb/django-url-or-relative-url-field"
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    'Environment :: Web Environment',
    'Framework :: Django',
]

packages = [
    { include = "url_or_relative_url_field", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.2.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
